--- a/elyrii_app/pubspec.yaml
+++ b/elyrii_app/pubspec.yaml
@@ -31,11 +31,36 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.3
-  http: ^1.0.0
+  
+  # Network
+  http: ^1.2.0
+  
+  # State Management
+  provider: ^6.1.1
+  
+  # Storage Local
+  shared_preferences: ^2.2.2
+  
+  # Date & Time
+  intl: ^0.19.0
+  
+  # Audio (pour méditation)
+  audioplayers: ^5.2.1
+  
+  # Animations
+  lottie: ^3.0.0
+  
+  # Accessibilité
+  flutter_tts: ^4.0.2
+  
+  # Charts & Analytics
+  fl_chart: ^0.68.0
+  
+  # Webview (pour intégration Godot/mascotte)
+  webview_flutter: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +71,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
